2010-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_db.php: In get_group_agents function, now agent's name search is not case sensitive.

	Fixes bug #3158022.

2010-01-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: Label parameter is now coded 
	in base 64 format when pgraph.php page is requested. 
	
	* godmode/reporting/visual_console_builder.editor.php: Added a javascript include.

	* include/javascript/encode_decode_base64.js: Added new javascript function for base 64 encoding/decoding.  

	Fixes bug #3152661, #3147119

2011-01-13  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_create_agent.php,
	include/help/ja/help_reconscript_definition.php,
	include/help/ja/help_warning_status.php,
	include/help/ja/help_manage_alert_list.php,
	include/help/ja/help_critical_status.php: Added new help files in Japanese.

	* include/help/ja/help_manage_alerts.php: Added a missing help file.

2010-01-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/pchart_graph.php
	* include/functions_visual_map.php: Removed blank spaces when graphs are resized 
	in Visual console.

2010-01-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_visual_map.php: Changed the way of create marks 
	for graphs in visual console from divs to tables. Label parameter is 
	now coded in base 64 codification when pgraph.php page is requested. 

	Fixes bug #3152661, #3152673
	
	* include/fgraph.php: Decode received parameter (label) in base 64 codification.

	* godmode/reporting/visual_console_builder.editor.js: In Visual console builder editor 
	added some image borders to create marks around graphs.

	Fixes bug #3152673

	* operation/agentes/stat_win.php
	godmode/reporting/graph_builder.preview.php: Label parameter is now coded 
	in base 64 format when pgraph.php page is requested.

	Fixes bug #3152661


2010-01-11 Raúl Mateos  <raulofpandora@gmail.com>
