@@ -255,10 +255,10 @@ foreach ($groups as $id_group => $group) {
 	
 	if ($group['hash_branch']) {
 		$data[0] = '<strong>'.$tabulation . ' ' . 
-			'<a href="javascript: showBranch(' . $group['id_grupo'] . ', ' . $group['parent'] . ');" title="' . __('Show branch children') . '"><span class="symbol_' . $group['id_grupo'] . ' ' . $symbolBranchs . '">' . $symbol . '</span> '. $group['nombre'].'</a></strong>';
+			'<a href="javascript: showBranch(' . $group['id_grupo'] . ', ' . $group['parent'] . ');" title="' . __('Show branch children') . '"><span class="symbol_' . $group['id_grupo'] . ' ' . $symbolBranchs . '">' . $symbol . '</span> '. printTruncateText($group['nombre']).'</a></strong>';
 	}
 	else {
-		$data[0] = '<strong>'.$tabulation . ' '. $group['nombre'].'</strong>';
+		$data[0] = '<strong>'.$tabulation . ' '. printTruncateText($group['nombre']).'</strong>';
 	}
 	$data[1] = print_group_icon($group['id_grupo'], true);
 	$data[2] = $group['disabled'] ? __('Disabled') : __('Enabled');
