@@ -430,7 +430,7 @@ CREATE TABLE IF NOT EXISTS `tevento` (
 
 CREATE TABLE IF NOT EXISTS `tgrupo` (
 	`id_grupo` mediumint(4) unsigned NOT NULL auto_increment,
-	`nombre` varchar(100) NOT NULL default '',
+	`nombre` text NOT NULL default '',
 	`icon` varchar(50) default NULL default 'world',
 	`parent` mediumint(4) unsigned NOT NULL default '0',
 	`propagate` tinyint(1) unsigned NOT NULL default '0',
